# tsapi

./: .gitignore  Dockerfile  README.md  cmds.py  main.py  mongo_client.py  pyproject.toml
.github/workflows/: build.yml
deploy/: app-secrets.yaml  config-map.yaml  deploy-gcp.yaml  service.yaml  serviceacct.yaml
model/: dataset.py  time_series.py
tests/: conftest.py  test_api.py  test_dataset.py  test_frequency.py  test_mongo.py  test_slicing.py
tsapi/: constants.py  dataset_cache.py  dataset_storage.py  errors.py  forecast.py  frequency.py  gcs.py  mongo_client.py
tsapi/model/: dataset.py  forecast.py  responses.py
