[tool.poetry]
name = "tsapi"
version = "0.1.0"
description = ""
authors = ["Mike Mull <mike.mull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = "^0.32.0"
polars = "^1.9.0"
pydantic-settings = "^2.6.0"
pyarrow = "^18.0.0"
httpx = "^0.27.2"
python-multipart = "^0.0.17"
motor = "^3.6.0"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
