[project]
name = "tsapi"
version = "0.1.0"
description = "REST API for time series data"
readme = "README.md"
authors = ["Mike Mull <mike.mull@gmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "motor>=3.6.0",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.0",
]
